v2.7.0   - Added ACEScsc files as IDTs.
	 - Made xml and ctl files never show as sequences of frames in
	   file requester.

v2.6.9   - Bug fixed Cancel button in CTL requester.
	 - Added a Load button to CTL requester to load CTL scripts not in
	   CTL_MODULE_PATH.
	 - Added support for CTL Input Device Transforms (IDTs).
	 - Added support for CTL Look Mod Transforms (LMTs).
	 - Added support to ACES 1.0 Clip Metadata to store all transforms
	   in an XML file.
v2.6.8   - Bug fixed lut creation on 32 and 128 sizes.  Previously, they would
	   get created and not cached.
	 - Adapted CTL pipeline to be compatible with ACES 1.0.  The one
	   rendering transform and all output device transforms from ACES
	   can be used.
	   Note that the previous transform_RRT and ODT_monitor have been
	   deprecated as they operate on XYZ.
v2.6.7   - Added installers for both platforms. The main benefit is
	   for Windows where shortcuts and an icon in Desktop are created.
v2.6.6.3 - Bug fixed pixel info display when mirror X or mirror Y are
           in effect.
         - Bug fixed color info, histogram and vectorscope when mirror
           X or Y are in effect.
         - Bug fixed data window display when mirror X or Y are in
           effect.
         - Bug fixed mirror X and mirror Y in stereo displays.
v2.6.6.2 - Bug fixed center and fit image when pixel ratio was different
	   than 1.
	 - Bug fixed mirror X and mirror Y when different data/display 
	   window is present.  Previously, the flipping was done within
	   the data window.
	 - Added back again the S and E buttons in the timeline to set
	   the start and ending of clips or the timeline.  The E button
	   works well, but the S button is subject to movies caches.
	 - Use ffmpeg's png loader when cache is off.  The loader is really
	   fast but requires opening of the file with the avi (ffmpeg) loader.
	   That means you cannot load the png sequence and then switch to the 